--- a/nus/CS2100.md
+++ b/nus/CS2100.md
@@ -4,7 +4,7 @@ title: CS2100 Review
 
 Taken in AY17/18 Sem 2 under Prof Aaron Tan Tuck Choy.
 
-This module teaches students the basics of how a computer works, with focus on the hardware.  Topics covered include fixed-point and floating-point number formats, processor datapath and control, logic circuits, pipelining, and caching; it essentially covers the important parts of a simple single-threaded microcontroller.  This module does not cover multithreading or operating systems, which is covered in CS2106.  The first few weeks also introduce basic C programming - no prior knowledge in C is assumed.  Those who are already fluent in C or C++ will find these lectures to be revision.
+This module teaches students the basics of how a computer works, with focus on the hardware.  Topics covered include fixed-point and floating-point number formats, processor datapath and control, logic circuits, pipelining, and caching; it essentially covers the important parts of a simple single-threaded microcontroller.  This module does not cover multithreading or operating systems, which is covered in CS2106.  The first few weeks also introduce basic C programming — no prior knowledge in C is assumed.  Those who are already fluent in C or C++ will find these lectures to be revision.
 
 There is a mix of content (pipelining, caching, processor datapath and control) and logical reasoning (boolean algebra, Karnaugh maps) in this module.
 
