--- a/nus/CS3203.md
+++ b/nus/CS3203.md
@@ -11,13 +11,13 @@ Workload:
 This is an 8MC module, so twice of the usual workload is expected.  The workload is still rather high, and it varies significantly across teams due to the different amounts of programming experience and different grade expectations of each team.
 
 Team formation:
-Students work in teams of six for this module in a hybrid group formation system - students first form groups of three (where they can choose their own groupmates), and the groups are paired up at random to form the final team that comprises of six people.  After forming the team of six, the original groups of three are immaterial.  As the team project forms the majority of the final grade, it is important to choose appropriate groupmates to form the group of three.
+Students work in teams of six for this module in a hybrid group formation system — students first form groups of three (where they can choose their own groupmates), and the groups are paired up at random to form the final team that comprises of six people.  After forming the team of six, the original groups of three are immaterial.  As the team project forms the majority of the final grade, it is important to choose appropriate groupmates to form the group of three.
 
 Project:
 Teams are required to build a command-line static program analyser from scratch.  Unlike CS2103, the requirements are specified clearly by the teaching team (so all teams produce prototypes that have the same functions), and all teams start from scratch (i.e. there is no pre-written code to begin with).  Because of this, there are many design decisions that need to be made, and the overall workload is much higher than CS2103.  A small portion of the project marks is awarded to extensions, where teams can implement additional features (that may differ from those implemented by other teams).
 
 Project Grading:
-Around 55% of the project marks are awarded by testing the team's prototype using test inputs supplied by the teaching team - this component is solely based on the correctness and efficiency of the team's prototype.  The rest of the project marks come from a few written reports and a final presentation (all are team work).  There are three development checkpoints (called "iterations") - at each iteration, teams must submit deliverables such as their source code and written report.
+Around 55% of the project marks are awarded by testing the team's prototype using test inputs supplied by the teaching team — this component is solely based on the correctness and efficiency of the team's prototype.  The rest of the project marks come from a few written reports and a final presentation (all are team work).  There are three development checkpoints (called "iterations") — at each iteration, teams must submit deliverables such as their source code and written report.
 
 Project Consultations:
 There are weekly compulsory team consultation sessions with an assigned TA.  These sessions seek to ensure that students do not lag behind in the development of their prototype.  They may also be used for discussion of their design decisions and written report.
