--- a/nus/CS4231.md
+++ b/nus/CS4231.md
@@ -8,7 +8,7 @@ This module covers the theoretical foundation of shared-memory and distributed-m
 
 Only midterms (40%) and finals (60%) are graded.  Homework questions are generally given after every lecture for students to check their understanding, but they are not collected and not graded.  While this module is specified to have two hours of lecture followed by an hour of tutorial, it is functionally three hours of lecture.
 
-This is an extremely proof-based module.  Expect to spend most of the time (during both lectures and exams) proving or disproving statements.  Typical exam questions do not tell students if a given statement is true or false - students have to decide if the statement is true on their own, and then prove (or disprove) it.  As exam questions do not generally "guide" students in the correct direction, confidence in one's own answers is important.  Some background in mathematical reasoning might help with this module.
+This is an extremely proof-based module.  Expect to spend most of the time (during both lectures and exams) proving or disproving statements.  Typical exam questions do not tell students if a given statement is true or false — students have to decide if the statement is true on their own, and then prove (or disprove) it.  As exam questions do not generally "guide" students in the correct direction, confidence in one's own answers is important.  Some background in mathematical reasoning might help with this module.
 
 Lectures proceed at a reasonable pace; it is generally slower than most mathematics modules.  As such, most concepts can be grasped during the lecture.
 
