--- a/nus/CS4261.md
+++ b/nus/CS4261.md
@@ -4,7 +4,7 @@ title: CS4261 Review
 
 Taken in AY19/20 Sem 1 under Prof Yair Zick.
 
-This module is a so-called "mezzanine" module - it is dual-coded, undergraduate students take the module as CS4261 and postgraduate students take this module as CS5461.  CS4261 students take a final exam, while CS5461 students do a pair project in place of the final exam.  (I did CS4261.)
+This module is a so-called "mezzanine" module — it is dual-coded, undergraduate students take the module as CS4261 and postgraduate students take this module as CS5461.  CS4261 students take a final exam, while CS5461 students do a pair project in place of the final exam.  (I did CS4261.)
 
 This module covers the basics of game theory (Nash equilibrium, social optimality), cooperative games (core, Shapley value), and some mechanism design.  Various types of games (routing games, various instances of cooperative games, Nash bargaining) and mechanisms (stable matching, allocation of indivisible goods, rent division, auctions, facility location on a line) are discussed.
 
