--- a/nus/ES2660.md
+++ b/nus/ES2660.md
@@ -6,8 +6,8 @@ Taken in AY17/18 Sem 2.  Tutored by Ms Chew Ping Lin; module coordinated by Ms L
 
 This module is a programme requirement for computer science majors, and is conducted by the Centre for English Language Communication (CELC).  The main aim of this module seems to be to train students to be critical thinkers.  There are no midterms or finals for this module.
 
-This module is conducted in small tutorial groups of around 16 students each, and class participation and discussion is expected.  There are no lectures for this module.  Discussions are rather informal - tutors encourage students' participation so students do not feel afraid of voicing out their opinions.
+This module is conducted in small tutorial groups of around 16 students each, and class participation and discussion is expected.  There are no lectures for this module.  Discussions are rather informal — tutors encourage students' participation so students do not feel afraid of voicing out their opinions.
 
-Students form groups of 4 for the two main graded assignments in this module - devising a rubric for critical thinking, and a short research paper.  The rubric for critical thinking is a group project, while the short research paper is individual work (but with group discussion sessions related to the paper).
+Students form groups of 4 for the two main graded assignments in this module — devising a rubric for critical thinking, and a short research paper.  The rubric for critical thinking is a group project, while the short research paper is individual work (but with group discussion sessions related to the paper).
 
 With two two-hour tutorials per week and various homework assignments, the workload of this module is somewhat heavy when compared to IS1103 or GER1000.  However, depending on your perspective, this module may be a refreshing breather to the content-heavy or mathematical nature of most computer science modules.
