--- a/nus/GEQ1000.md
+++ b/nus/GEQ1000.md
@@ -6,7 +6,7 @@ Taken in AY18/19 Sem 1.
 
 This is a compulsory module for all students (regardless of faculty), and all lectures are online.  Face-to-face tutorials are conducted fortnightly.
 
-The module gives a taste of the kind of reasoning and questioning in different disciplines.  When I took it, six disciplines were explored - computational thinking, design, economics, engineering, philosophy, and physics.  For each discipline, there is a series of online lectures, an online quiz, and a tutorial session.
+The module gives a taste of the kind of reasoning and questioning in different disciplines.  When I took it, six disciplines were explored — computational thinking, design, economics, engineering, philosophy, and physics.  For each discipline, there is a series of online lectures, an online quiz, and a tutorial session.
 
 Workload is relatively light.  Furthermore, as this module is graded on a CS/CU basis, it is rather relaxed and there is little pressure to complete every single assignment (this may be helpful during busy periods of the semester).
 
