--- a/nus/IS1103.md
+++ b/nus/IS1103.md
@@ -6,7 +6,7 @@ Taken in AY17/18 Sem 2 under Prof Yang Lu and Prof Anand Ramchand.
 
 This is an introductory module to various modern IT systems used in the corporate world.  Ethical considerations are also discussed in the later part of the semester.  This module is one of the few "soft" modules that are compulsory for computer science majors; as such, many plan to use the S/U option for this module.  The workload of this module is relatively little compared to ES2660, which is another "soft" module compulsory for computer science majors.
 
-Students are to form groups of 4-5 for this module.  Each group is expected to collaborate on various tutorial tasks and embark on a group project - proposing a technological solution for a chosen social issue.
+Students are to form groups of 4-5 for this module.  Each group is expected to collaborate on various tutorial tasks and embark on a group project — proposing a technological solution for a chosen social issue.
 
 There are no midterms or finals for this module.  Individual assessment includes 5 online quizzes (MCQ), 2 assignments (short essays), tutorial attendance, and tutorial participation.
 
