--- a/nus/MA2104.md
+++ b/nus/MA2104.md
@@ -6,7 +6,7 @@ Taken in AY17/18 Sem 2 under Prof Tan Ser Peow.
 
 This is a module where the lecturer uses umbrellas, tennis balls, and (significantly) multiple types of cake as teaching tools during lecture.  Prof Tan tries to give physical meaning to the mathematical quantities that are investigated, and this is helpful in giving students some intuition of what the mathematical quantities represent.  (Also, we get to eat the cake.)
 
-This module covers three main topics - differentiation (partial differentiation, critical points, Lagrange multipliers), integration (area & volume integrals, line & surface integrals), and the links between them (divergence, curl).  Brief introduction on vectors and surfaces is made at the start of this module, as these concepts will be used throughout the module.  In general, this module is very gentle in its introduction of new concepts, and the pace is very manageable.
+This module covers three main topics — differentiation (partial differentiation, critical points, Lagrange multipliers), integration (area & volume integrals, line & surface integrals), and the links between them (divergence, curl).  Brief introduction on vectors and surfaces is made at the start of this module, as these concepts will be used throughout the module.  In general, this module is very gentle in its introduction of new concepts, and the pace is very manageable.
 
 Unlike some mathematics modules, most questions in tests and exams require calculations instead of proofs.  While proof-based reasoning is not as important here, students need to be careful in the accuracy of their calculations (some of which may be slightly tedious).  Some skill in algebraic manipulation is assumed.
 
