--- a/nus/MA2108S.md
+++ b/nus/MA2108S.md
@@ -16,7 +16,7 @@ This module has midterms (35%) and finals (50%), both of which are closed-book (
 
 Prof Sun is able to give students a good intuition of the abstract concepts involved in this module, which is rather useful for appreciating these abstract concepts.  Most concepts were illustrated clearly in his lectures.  He also clarifies students' doubts after every lecture, which helps ensure that students do not fall behind in understanding the key concepts.
 
-There are no lecture notes and no webcasts - Prof Sun solely uses the whiteboard for teaching.  As such, it is helpful to attend lectures and take down notes during the lectures.  The main reference book is Principles of Mathematical Analysis by Walter Rudin, and it is followed closely throughout the module, allowing students to do revision by using the relevant chapters of this book.
+There are no lecture notes and no webcasts — Prof Sun solely uses the whiteboard for teaching.  As such, it is helpful to attend lectures and take down notes during the lectures.  The main reference book is Principles of Mathematical Analysis by Walter Rudin, and it is followed closely throughout the module, allowing students to do revision by using the relevant chapters of this book.
 
 Tutorials generally consist of 4-6 questions of varying difficulty, and students are expected to have completed all the tutorial questions before the session.  Students are usually chosen during the tutorial session to present their solutions to the class.
 
