--- a/nus/CS2101.md
+++ b/nus/CS2101.md
@@ -6,7 +6,7 @@ Taken in AY18/19 Sem 1.  Tutored by Ms Diana Chung; module coordinated by Ms Ani
 
 This module is taken by computer science students together with CS2103T to fulfil SoC requirements.  It is coordinated and run by staff from the Centre for English Language Communication (CELC).  The first half of the semester teaches general communication and workplace interaction skills, while the second half of the semester is heavily linked to the software engineering project from CS2103T (such as writing user/developer guides and making presentations for the CS2103T project).
 
-The module is conducted in a similar style to ES2660 - contact time is via sectional groups of 20 students each, and class participation is expected.  The 20 students in each sectional group will be in the same CS2103T tutorial.  There are no midterms or finals, and the S/U option can be exercised on this module.
+The module is conducted in a similar style to ES2660 — contact time is via sectional groups of 20 students each, and class participation is expected.  The 20 students in each sectional group will be in the same CS2103T tutorial.  There are no midterms or finals, and the S/U option can be exercised on this module.
 
 Students need to form two sets of groups in this module: in the first half of the semester (for work and assessment not directly related to CS2103T), and in the second half of the semester (this will be the grouping for the CS2103T software engineering project).  When I took the module, each group was required to contain at least one male, one female, one Singaporean, and one non-Singaporean student, and no more than two people in the same group for the first half of the semester were allowed to share a group for the second half.  Generally, students optimise for their CS2103T group (i.e. the second half of the semester) as it would have an impact on their CS2103T grade.
 
