--- a/nus/CS2104.md
+++ b/nus/CS2104.md
@@ -20,9 +20,9 @@ Graded components:
 - Final exam (45%)
 - Tutorial participation (5%)
 
-Weekly tutorial sessions are carried out in a computer lab - some questions are distributed to students a few days before the session, and the TA discusses the solutions during the session.  These questions are mainly implementation questions - students are expected to write code that conforms to some specified behaviour.
+Weekly tutorial sessions are carried out in a computer lab — some questions are distributed to students a few days before the session, and the TA discusses the solutions during the session.  These questions are mainly implementation questions — students are expected to write code that conforms to some specified behaviour.
 
-There are four assignments - three of them are programming assignments in Haskell, and one is a research assignment on a programming language topic of the student's choice.  Tutorial sessions generally discuss questions of similar nature to the programming assignments, so a good grasp of the tutorial material should make the programming assignments manageable.  All four assignments are take-home assignments - students are given a few weeks to complete each assignment.
+There are four assignments — three of them are programming assignments in Haskell, and one is a research assignment on a programming language topic of the student's choice.  Tutorial sessions generally discuss questions of similar nature to the programming assignments, so a good grasp of the tutorial material should make the programming assignments manageable.  All four assignments are take-home assignments — students are given a few weeks to complete each assignment.
 
 Midterm and final exams are open-book.  Midterms consists of approximately 80% MCQs, and finals consists of approximately 50% MCQs.  Both midterms and finals scrutinise students' knowledge on the features and details programming languages covered in this module (with the exception of Scala, which is non-examinable), with questions such as "what is the inferred type and return value of the following expression" or "write a data type that implements this typeclass".  Most questions were unambiguous, but there was a problem with the open ended questions in the midterm test.
 
