--- a/nus/CS2105.md
+++ b/nus/CS2105.md
@@ -4,7 +4,7 @@ title: CS2105 Review
 
 Taken in AY17/18 Sem 2 under Prof Zhou Lifeng.
 
-This module introduces the five layers in the Internet Protocol stack - application, transport, network, link, and physical - and how these layers come together to make the Internet work.  It also covers supporting protocols such as ARP, ICMP, DHCP, and DNS.  Some secondary school level mathematics is required to comprehend the more quantitative concepts that are covered.
+This module introduces the five layers in the Internet Protocol stack — application, transport, network, link, and physical — and how these layers come together to make the Internet work.  It also covers supporting protocols such as ARP, ICMP, DHCP, and DNS.  Some secondary school level mathematics is required to comprehend the more quantitative concepts that are covered.
 
 This module is somewhat content-heavy, as many details of the various protocols in the Internet Protocol stack are covered and these details may be tested in the exams.  Those who have never peeked into the inner workings of the Internet before may find some difficulty in absorbing the large amount of content.
 
