--- a/nus/CP2106.md
+++ b/nus/CP2106.md
@@ -8,7 +8,7 @@ This module is "independent" to the fullest extent of the word.  It is pair work
 
 This module is graded on a CS/CU basis, and (barring exceptional situations) nobody is given a CU grade — you can drop the module at any time during the summer break with no penalty.  This means that you can experiment and explore various technologies without the fear of getting a bad grade.
 
-There are two compulsory face-to-face sessions in this module — "Liftoff" (the start of the journey) and "Splashdown" (the end of the journey).  Some optional sessions are available during the summer break, and these sessions focus on particular technologies (e.g. iOS development, web app deployment) that might be useful.  More information can be found here: https://orbital.comp.nus.edu.sg/
+There are two compulsory face-to-face sessions in this module — "Liftoff" (the start of the journey) and "Splashdown" (the end of the journey).  Some optional sessions are available during the summer break, and these sessions focus on particular technologies (e.g. iOS development, web app deployment) that might be useful.  More information can be found here: <https://orbital.comp.nus.edu.sg/>
 
 There are three "levels of achievement" that are awarded depending on how complex your project is, and some prizes to be won for the top projects.  However, peer voting is used for the prizes, and hence it is largely dependent on your team's popularity and the poster location that you have been assigned.  I recommend that you sign up for Orbital so that you can work on something that you enjoy, rather than for the awards or prizes.
 
@@ -18,5 +18,5 @@ Prof Zhao Jin was the module coordinator in 2018, but the module coordinator has
 
 The module experienced an extremely high demand in 2018 — if you are interested, look out for the registration email in the second half of semester 2, and sign up immediately upon receipt of the email.
 
-Here's my project, Circuit Sandbox: https://github.com/btzy/circuit-sandbox
+Here's my project, Circuit Sandbox: <https://github.com/btzy/circuit-sandbox>
 (The binaries definitely work on Windows 10; for other operating systems you might need to compile from source if the binaries don't work.)
