Add reviews and cheatsheets for AY 21/22 Sem 1

--- a/nus/CS4232.md
+++ b/nus/CS4232.md
@@ -22,7 +22,7 @@ The midterms and exam are open book (though this may be a result of conducting t
 
 The midterm tests and exam contain a mix of construction and proof questions.  Construction questions are those that ask for an explicit automaton or grammar that exhibits a certain property (e.g. accepts a given language), and are generally simpler.  Proof questions are generally tougher, and require formal proofs.
 
-This module is taught rather rigorously -- formal proofs are covered during the lectures, and some questions in the tests and exam require students to prove given statements.  However, Prof Jain seems to be rather lenient with awarding partial marks for proof questions -- if the general idea of the proof is correct, the student should obtain most of the marks for the question.
+This module is taught rather rigorously — formal proofs are covered during the lectures, and some questions in the tests and exam require students to prove given statements.  However, Prof Jain seems to be rather lenient with awarding partial marks for proof questions — if the general idea of the proof is correct, the student should obtain most of the marks for the question.
 
 Most of Prof Jain's lectures are moderately paced, and he explains each concept well, mostly without making assumptions about students' prior knowledge.  This makes his lectures quite manageable most of the time.
 
